--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -109,11 +109,26 @@
             android:id="@+id/idvercontra"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mostrar Contraseña"
+            android:text="@string/label_switch_mostrarcontrasenia"
             app:layout_constraintBottom_toTopOf="@+id/guideline5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
             app:layout_constraintTop_toBottomOf="@+id/editText_pwd" />
+
+        <Button
+            android:id="@+id/button_olvideCont"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#00FFFFFF"
+            android:text="@string/label_button_olvidecontrasenia"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline3"
+            app:layout_constraintVertical_bias="0.417" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
