--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph.xml"
     app:startDestination="@id/registerFragment">
 
@@ -11,6 +12,9 @@
         <action
             android:id="@+id/action_registerFragment_to_userPerfilFragment"
             app:destination="@id/userPerfilFragment" />
+        <action
+            android:id="@+id/action_registerFragment_to_resetPwdFragment"
+            app:destination="@id/resetPwdFragment" />
     </fragment>
     <fragment
         android:id="@+id/userPerfilFragment"
@@ -26,4 +30,9 @@
             android:id="@+id/action_userPerfilFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/resetPwdFragment"
+        android:name="com.example.the17odsapp.ResetPwdFragment"
+        android:label="fragment_reset_pwd"
+        tools:layout="@layout/fragment_reset_pwd" />
 </navigation>
