--- a/app/src/main/res/layout/fragment_user_perfil.xml
+++ b/app/src/main/res/layout/fragment_user_perfil.xml
@@ -26,6 +26,14 @@
             android:layout_margin="20dp"
             android:textSize="18sp"
             android:textColor="@color/black"/>
+        <Button
+            android:id="@+id/button_editPerfil"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_margin="20dp"
+            android:layout_weight="1"
+            android:text="@string/label_button_editperfil" />
 
         <Button
             android:id="@+id/button_logOut"
