--- a/app/src/main/res/layout/fragment_register_data.xml
+++ b/app/src/main/res/layout/fragment_register_data.xml
@@ -4,96 +4,119 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".RegisterDataFragment">
 
-<androidx.appcompat.widget.LinearLayoutCompat
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="20dp">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/label_registraDatos" />
-
-    <EditText
-        android:id="@+id/editText_NombreComp"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="@string/label_nombreCompleto"
-        android:layout_marginTop="20dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/label_direccion"/>
+        android:layout_height="wrap_content">
 
 
-    <EditText
-        android:id="@+id/Editext_calle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="@string/label_direccionCalle"/>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="20dp">
 
-    <EditText
-        android:id="@+id/Editext_NExterior"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="@string/label_direccionNExterior"
-        android:inputType="number"/>
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_registraDatos" />
 
-    <EditText
-        android:id="@+id/Editext_cp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="@string/label_direccionCPostal"
-        android:inputType="number"/>
+            <EditText
+                android:id="@+id/editText_NombreComp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:hint="@string/label_nombreCompleto"
+                android:layout_marginTop="20dp"/>
 
-    <EditText
-        android:id="@+id/Editext_colonia"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:inputType="textPersonName"
-        android:hint="@string/label_direccionColonia"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_nickname"/>
 
-    <EditText
-        android:id="@+id/Editext_ciudad"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:inputType="textPersonName"
-        android:hint="@string/label_direccionCiudad"/>
+            <EditText
+                android:id="@+id/editText_Nickname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:hint="@string/hint_nickname"
+                android:layout_marginTop="20dp"/>
 
-    <EditText
-        android:id="@+id/Editext_estado"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:inputType="textPersonName"
-        android:hint="@string/label_direccionEstado"/>
-
-    <EditText
-        android:id="@+id/Editext_pais"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:inputType="textPersonName"
-        android:hint="@string/label_direccionPais"/>
-
-    <Button
-        android:id="@+id/button_registrarDatos"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/label_button_registrarDatos" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/label_direccion"/>
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+            <EditText
+                android:id="@+id/Editext_calle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:hint="@string/label_direccionCalle"/>
+
+            <EditText
+                android:id="@+id/Editext_NExterior"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:hint="@string/label_direccionNExterior"
+                android:inputType="number"/>
+
+            <EditText
+                android:id="@+id/Editext_cp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:hint="@string/label_direccionCPostal"
+                android:inputType="number"/>
+
+            <EditText
+                android:id="@+id/Editext_colonia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:inputType="textPersonName"
+                android:hint="@string/label_direccionColonia"/>
+
+            <EditText
+                android:id="@+id/Editext_ciudad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:inputType="textPersonName"
+                android:hint="@string/label_direccionCiudad"/>
+
+            <EditText
+                android:id="@+id/Editext_estado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:inputType="textPersonName"
+                android:hint="@string/label_direccionEstado"/>
+
+            <EditText
+                android:id="@+id/Editext_pais"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:inputType="textPersonName"
+                android:hint="@string/label_direccionPais"/>
+
+            <Button
+                android:id="@+id/button_registrarDatos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/label_button_registrarDatos" />
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+    </ScrollView>
+
 </layout>
